[package]
name = "pathfinding"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nightly = []

[dependencies]
enumset = "1.0.7"

[dev-dependencies]
rand = { version = "0.8.4", features = ["min_const_gen"] }
rand_pcg = "0.3.1"
structopt = "0.3.22"

[profile.release]
debug = true
