[package]
name = "benchmark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
bincode = "1.3.3"
itertools = "0.10.1"
pathfinding = { path = "../pathfinding/" }
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.23"
