[package]
name = "pathfinding"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.7.0"
enumset = "1.0.7"
qcell = "0.4.1"
serde = { version = "1.0.130", optional = true, features = ["derive"] }

[dev-dependencies]
rand = { version = "0.8.4", features = ["min_const_gen"] }
rand_pcg = "0.3.1"
structopt = "0.3.22"
